# daily-rust

./: .gitignore  README.adoc
003-guessing_game/src/: main.rs
004-concepts/: fibonacci_stats.ods
004-concepts/src/: main.rs
005-ownership/src/: main.rs
006-slices/src/: main.rs
007-structs_enums/: Cargo.toml
007-structs_enums/src/: main.rs
008-modules/src/: character.rs  dices.rs  main.rs
008-modules/src/weapons/: handheld.rs
009-collections/src/: hashmaps.rs  main.rs  strings.rs  vectors.rs
010-errors/: hello.txt
010-errors/src/: main.rs
011-generictrait/: Cargo.toml
011-generictrait/src/: main.rs
012-tests/: Cargo.toml
012-tests/src/: character.rs  dices.rs  lib.rs  weapons.rs
012-tests/src/weapons/: handheld.rs
013-pqinspect/src/: main.rs
axumapp/: Cargo.toml  README.adoc
axumapp/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
axumapp/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
axumapp/tests/: quick_dev.rs
datarust/: Cargo.toml  README.adoc
datarust/src/: datafusion.rs  duckdb.rs  main.rs  polars.rs
plai/: Cargo.toml  README.adoc  Trunk.toml  index.html  input.css  package-lock.json  tailwind.config.js
plai/src/: game.rs  lib.rs  main.rs  player.rs  round.rs
plai/src/cards/: containers.rs  mod.rs
plai/src/ui/: app.rs  game.rs  game_status.rs  mod.rs  startup.rs
plai/style/: output.css
plaicards/: .gitignore  Cargo.toml  DECISIONS.adoc  Dockerfile  Makefile  README.md  crowdfunding-emails.txt  leptosfmt.toml  package-lock.json  package.json  tailwind.config.js
plaicards/.vim/: coc-settings.json
plaicards/locales/en/: web_landing.ftl
plaicards/src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
plaicards/src/game/: errors.rs  mod.rs  player.rs  round.rs
plaicards/src/game/cards/: containers.rs  mod.rs
plaicards/src/web/: board.rs  common.rs  errors.rs  home.rs  lobby.rs  mod.rs
plaicards/src/web/board/: mod.rs  ssr.rs  view.rs  websocket.rs
plaicards/src/web/landing/: card_showcase.rs  mod.rs  page.rs  rules.rs
plaicards/src/web/lobby/: mod.rs  ssr.rs  view.rs  websocket.rs
plaicards/src/web/plausible/: README.adoc  components.rs  event.rs  experiments.rs  mod.rs
plaicards/style/: tailwind.css
pqinspect/: Cargo.toml  README.md
pqinspect/src/: lib.rs
rustlings/exercises/: quiz1.rs  quiz2.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/error_handling/: errors2.rs  errors4.rs  errors6.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
rustlings/exercises/if/: if1.rs
rustlings/exercises/iterators/: iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings/exercises/primitive_types/: primitive_types2.rs
rustlings/exercises/strings/: strings3.rs
