[package]
name = "axumapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features=["full"]}
axum = { version= "0.7.5", features=["macros"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
httpc-test = "0.1.9"
anyhow = "1.0.81"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
lazy-regex = "3.1.0"
async-trait = "0.1.79"
strum_macros = "0.26.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
serde_with = "3.7.0"
