[package]
name = "plai"
version = "0.1.0"
edition = "2021"

[lib]
name = "plai"
path = "src/lib.rs"

[[bin]]
name = "plai_web"
path = "src/bin/web.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
rand = "0.8.5"
rstest = "0.18.2"

leptos = {  version = "0.6.5",features = ["csr"] }
leptos_meta = { version = "0.6.5", features = ["csr"] }
leptos_router = {  version = "0.6.5",features = ["csr"] }
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }

# From https://github.com/0atman/noboilerplate/blob/main/scripts/37-functional-rust.md
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
